backend-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # URL 재작성, /one -> /, /two -> /
spec:
  rules:
    - host: '*.nip.io'
      http:
        paths:
          - path: /admin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-svc-np
                port:
                  number: 8000
          - path: /main(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: main-svc-np
                port:
                  number: 5000
