gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: react-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: react-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - react-gateway
  http:
  - match:
    # - uri:
    #     exact: /admin/products
    # - uri:
    #     exact: /
    route:
    - destination:
        host: react-svc-lb
        port:
          number: 3000
