virtualservice-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: admin-canary
spec:
  hosts:
    - admin-svc
  http:
  - route:
    - destination:
        host: admin-svc
        subset: v1
      weight: 80
    - destination:
        host: admin-svc
        subset: v2
      weight: 10
    - destination:
        host: admin-svc
        subset: v3
      weight: 10
